fixed spacing and added ajax post

--- a/app/assets/stylesheets/reservations.css.scss
+++ b/app/assets/stylesheets/reservations.css.scss
@@ -12,7 +12,7 @@ h1 {
 .centered {
 	text-align: center;
 }
-.icon_image {
+img.wizard-image {
 	max-width:100px;
 	max-height:100px;
 }
